force-app/main/default/objects/Log__c/fields/Hour_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hour_Spent__c</fullName>
    <label>Hour Spent</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>