force-app/main/default/objects/Log__c/fields/Related_to__c.field-meta.xml
<CustomField>
    <fullName>Related_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pick a Member</inlineHelpText>
    <label>Related to</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>