force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Hour_Spent__c</columns>
    <columns>Description__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Related_to__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>